# py-sdl2

./: .gitattributes  .gitignore  .hgignore  .travis.yml  AUTHORS.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  appveyor.yml  make.bat  pyproject.toml  setup.py
.ci/: getsdl2.py  install-linux-deps.sh  install-win-deps.cmd  venv-osx.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: experimental_tests.yml  linux_tests.yml  macos_tests.yml  run_tests.yml
.travis/: install-linux-deps.sh  install-osx-deps.sh  venv-osx.sh
doc/: Makefile  conf.py  copying.rst  faq.rst  index.rst  install.rst  integration.rst  make.bat  news.rst  todos.rst
doc/modules/: index.rst  sdl2.rst  sdl2_sdlgfx.rst  sdl2_sdlimage.rst  sdl2_sdlmixer.rst  sdl2_sdlttf.rst  sdl2ext.rst  sdl2ext_algorithms.rst  sdl2ext_array.rst  (+16 more)
examples/: __init__.py  colorpalettes.py  draw.py  gfxdrawing.py  gui.py  helloworld.py  mixer.py  opengl.py  particles.py  pixelaccess.py  pong.py  scene.py  sdl2hello.py  transfomations.py  ttf.py
sdl2/: __init__.py  audio.py  blendmode.py  clipboard.py  cpuinfo.py  dll.py  endian.py  error.py  events.py  filesystem.py  gamecontroller.py  gesture.py  guid.py  haptic.py  hidapi.py  hints.py  joystick.py  keyboard.py  keycode.py  loadso.py  locale.py  log.py  messagebox.py  metal.py  misc.py  mouse.py  pixels.py  platform.py  power.py  rect.py  render.py  rwops.py  scancode.py  sdlgfx.py  sdlimage.py  sdlmixer.py  sdlttf.py  sensor.py  shape.py  stdinc.py  (+7 more)
util/: valgrind.sh
(+121 files in other folders)
